<resources>
    <string name="app_name">ExecuTorchLlamaDemo</string>
    <string name="demo_pref_file_key">DemoPrefFileKey</string>
    <string name="saved_messages_json_key">SavedMessagesJsonKey</string>
    <string name="logs_json_key">LogsJsonKey</string>
</resources>
