...
                description = "Select your own model and tokenizer path.",
                icon = Icons.Filled.PlayArrow,
                onClick = onLoadModelClick
            )

            WelcomeCard(
                title = "Preset model",
                description = "Download a pre-configured model from the cloud.",
                icon = Icons.Filled.CloudDownload,
                onClick = onDownloadModelClick
            )

            WelcomeCardNoDescription(
...
